# cse131

./: .envrc  .gitignore  README.md  dune  dune-project  main.c  our_code
lib/: btree.ml  dune  fibo.ml  llist.ml  max.ml  utils.ml
pa0/: Makefile  cse131.opam  dune-project
pa0/lib/: sexps.ml  utils.ml
pa0/test/: test_cse131.ml
pa1/: .gitignore  Makefile  README.md
pa1-student/: Makefile  asm.ml  dune-project  myTests.ml  pa1.opam  runner.ml  test.ml
pa1-student/lib/: dune  parser.ml
pa1/input/: letdup_valid.ana
pa1/lib/: asm.ml  compile.ml  compile_simple.ml  dune  expr.ml  parser.ml  runner.ml
pa1/test/: dune  myTests.ml  test_pa1.ml
pa2/: Makefile  README.md  asm.ml  compile.ml  dune-project  main.c  myTests.ml  pa2.opam  parser.ml  test.ml
pa2/input/: letdup.boa  letlet.ana  reserved.boa  sub1.ana
pa2/lib/: asm.ml  compile.ml  dune  expr.ml  parser.ml  runner.ml
pa2/test/: dune  test_pa2.ml
test/: dune  test_cse131.ml  test_utils.ml
